tests/purs/failing/DerivingClauseEmpty.purs
-- @shouldFailWith ErrorParsingModule
module Main where

data Foo = Foo
  derive ()
